# debt-resolver

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.json
.github/workflows/: apply-review.yml  auto-merge.yml  code-review.yml  deploy.yml
app/: config.py
app/bot/: main.py
app/bot/filters/: owner.py
app/bot/handlers/: balance.py  borrowed.py  expense.py  income.py  loans.py  optimize.py  start.py
app/bot/keyboards/: inline.py  reply.py
app/bot/middleware/: auth.py
app/bot/states/: forms.py
app/db/: client.py
app/db/migrations/: 001_initial_schema.sql  002_indexes.sql  003_enable_rls.sql  004_rls_schema_migrations.sql  005_add_term_months.sql
app/db/repositories/: __init__.py  base.py  borrowed.py  expense.py  income.py  loan.py  loan_payment.py  user.py
app/domain/: balance.py  exceptions.py  models.py  optimization.py
app/services/: __init__.py  balance_service.py  loan_service.py  optimization_service.py  transaction_service.py
docker/bot/: Dockerfile
scripts/: migrate.py  seed_loans.py
tech-docs/: architecture.md  bot-commands.md  database.md  development.md  domain-logic.md
tests/: conftest.py
tests/domain/: test_balance.py  test_optimization.py
tests/services/: test_balance_service.py
